# vggt

./: client_example.py  inference.py  inference_server.py  pyproject.toml  requirements.txt
vggt/utils/: load_fn.py
